
Example:

  isabelle dotnet_setup
  isabelle dotnet fsi
  > 1 + 1;;
  > #quit;;

* The headless PIDE server (e.g. command-line tool "isabelle server")
now observes the option "show_states" as given in the server command
"session_start". If enabled, the server command "use_theories" will
expose proof state output via its "messages" field.



New in Isabelle2022 (October 2022)
----------------------------------

*** General ***

* The instantiation of schematic goals is now displayed explicitly as a
list of variable assignments. This works for proof state output, and at
the end of a toplevel proof. In rare situations, a proof command or
proof method may violate the intended goal discipline, by not producing
an instance of the original goal, but there is only a warning, no hard
error.

* Session ROOT files support 'chapter_definition' entries (optional).
This allows to associate additional information as follows:

  - "chapter_definition NAME (GROUPS)" to make all sessions that belong
  to this chapter members of the given groups

  - "chapter_definition NAME description TEXT" to provide a description
  for presentation purposes

* Old-style {* verbatim *} tokens have been discontinued (legacy feature
since Isabelle2019). INCOMPATIBILITY, use \<open>cartouche\<close> syntax instead.


*** Isabelle/jEdit Prover IDE ***

* Command 'print_state' outputs a plain message, i.e. "writeln" instead
of "state". Thus it is displayed in the Output panel, even if the option
"editor_output_state" is disabled.


*** Isabelle/VSCode Prover IDE ***

* VSCodium, an open-source distribution of VSCode without MS telemetry,
has been bundled with Isabelle as add-on component. The command-line
tool "isabelle vscode" automatically configures it as Isabelle/VSCode
and starts the application. This includes special support for the
UTF-8-Isabelle encoding and the corresponding Isabelle fonts.

* Command-line tools "isabelle electron" and "isabelle node" provide